# NoctaVox

./: Cargo.toml  dist-workspace.toml
docs/: CHANGELOG.md
noctavox/src/tui/: layout_minimal.rs
noctavox/src/tui/widgets/popups/: stats.rs
src/: app_config.rs  lib.rs
src/app_core/: app.rs  key_events.rs  library.rs  mod.rs  onboarding.rs  playback.rs  player.rs
src/database/: mod.rs  queries.rs
src/key_handler/: action.rs  mod.rs
src/navidrome/: mod.rs  runtime.rs  stream_prefetch.rs  subsonic_http.rs  sync.rs
src/playback/: validated_song.rs
src/tui/widgets/: mod.rs  popup.rs
src/tui/widgets/popups/: mod.rs  setup_wizard.rs
src/ui_state/: display_state.rs  mod.rs  popup.rs  ui_state.rs  waveform.rs
src/ui_state/settings/: root_mgmt.rs
