[package]
name = "noctavox"
version = "0.2.6"
edition = "2024"
authors = ["Jaxx497"]
description = "A lightweight TUI music player for local files"
license = "MIT"
repository = "https://github.com/Jaxx497/NoctaVox/"
keywords = ["tui", "music", "audio", "player", "terminal"]
categories = ["multimedia::audio", "command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
crossbeam = { version = "0.8.4", default-features = false, features = ["crossbeam-channel", "crossbeam-queue"] }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
indexmap = "2.13.0"
lofty = "0.24.0"
nohash-hasher = "0.2.0"
rand = "0.10.0"
ratatui = {version = "0.30.0", features = ["serde"]}
rayon = "1.11.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0"
spectrum-analyzer = "1.7.0"
toml = "1.0.3"
ratatui-textarea = "0.9.0"
walkdir = "2.5.0"
unicode-normalization = "0.1.25"
unicode-width = "0.2.2"
voxio = "0.1.3"
souvlaki = "0.7"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
submarine = { version = "0.1.1", features = ["navidrome"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream", "blocking"] }

[target.'cfg(windows)'.dependencies]
windows = "0.56"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "vox"
path = "src/main.rs"

[profile.release]
lto = "thin"
codegen-units = 4
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"
